[brief] Adds definitions for matrices.
[detailed]

--- a/notes/tex/preamble.tex
+++ b/notes/tex/preamble.tex
@@ -21,6 +21,11 @@
 \def\s{{\mathbf s }}
 \def\x{{\mathbf x }}
 
+\def\M{{\mathbf M}}
+\def\R{{\mathbf R}}
+\def\S{{\mathbf S}}
+\def\T{{\mathbf T}}
+
 \lstdefinestyle{codestyle}{
   belowcaptionskip = 1\baselineskip,
   breaklines = true,
